<resources>
    <string name="app_name">TraWell</string>

    <!--Titles-->

    <string name="title">TraWell</string>
    <string name="title_errorrep">Forgalmi hiba jelentése</string>
    <string name="tutorial_pont">Tutorial Pont</string>
    <string name="gps_coord">Aktuális GPS koordináták</string>
    <string name="get_pos">Pozíció lekérdezése</string>
    <string name="send_problem">Észlelés beküldése</string>
    <string name="send_note">Bejelentés küldése</string>
    <string name="title_activity_traffic_error">Jelentett forgalmi fennakadások</string>
    <string name="title_report">Észlelés beküldése</string>
    <string name="title_stop_choice">Megálló kiválasztása</string>

    <!--Message panel buttons-->

    <string name="next">Következő</string>
    <string name="previous">Előző</string>
    <string name="cancel">Mégse</string>
    <string name="exit">Kilépés</string>
    <string name="confirm_dialog_title">Beküldés megerősítése</string>
    <string name="confirm_dialog_message">Erősítsd meg a beküldést!</string>
    <string name="positive_button_text">IGEN</string>
    <string name="negative_button_text">NEM</string>
    <string name="neutral_button_text">MÉGSE</string>

    <!--Messages-->

    <string name="exit_dialog_title">Megerősítés</string>
    <string name="exit_dialog_message">Biztosan ki szeretnél lépni?</string>

    <!--Type of public transport-->

    <string name="bus">Busz</string>
    <string name="tram">Villamos</string>
    <string name="trolley">Trolibusz</string>
    <string name="metro">Metró</string>
    <string name="nightbus">Éjszakai busz</string>
    <string name="rail">HÉV</string>
    <string name="m1">Metró [M1]</string>
    <string name="m2">Metró [M2]</string>
    <string name="m3">Metró [M3]</string>
    <string name="m4">Metró [M4]</string>

    <!--Report types-->

    <string name="title_error_type_choose">Bejelentés típus választása</string>
    <string name="eletro_problem">Áramkimaradás</string>
    <string name="traffic_problem_car">Baleset (autó)</string>
    <string name="traffic_problem_public">Baleset (tömegközlekedési eszköz)</string>
    <string name="conductor">Ellenőr</string>
    <string name="other">Egyéb</string>
    <string name="traffic_jam">Forgalmi torlódás</string>
    <string name="weather">Időjárás miatti fennakadás</string>
    <string name="unknown">Ismeretlen</string>
    <string name="delay">Késés</string>
    <string name="public_tile_error">Szerelvényhiba</string>
    <string name="illness">Utas rosszullét</string>

    <!--Toast messages-->

    <string name="thanks_message">Rögzítettük a bejegyzést!
        Köszönjük a visszajelzést, és mindig érvényesítsd jegyed, bérleted!</string>
    <string name="update_message">Frissítettük a bejegyzést!
        Köszönjük a visszajelzést!</string>
    <string name="no_station">Nincs megálló ebben a távolságban: </string>

    <!--Options-->

    <string name="settings">Beállítások</string>
    <string name="credit">Névjegy</string>
    <string name="placeholder">Betöltés</string>
    <string name="name">Név</string>
    <string name="search_range">Szűrés távolsága</string>
    <string name="report_lifetime">Bejelentés időtartama</string>

    <!--Others-->

    <string name="reported_traffic_errors">Jelentett fennakadás</string>
    <string name="reported_conds">Jelentett ellenőrök</string>
    <string name="rep_type">Report típus</string>
    <string name="meter">méter</string>
    <string name="actual_pos">Aktuális hely</string>
    <string name="metrostation">[M]</string>
    <string name="actual_value">Jelenlegi érték:</string>
    <string name="minute">perc</string>
    <string name="title_activity_station_picker">Válassz megállóhelyet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="press_long">Bejelentés küldéséhez nyomd hosszan a kiválasztott típust!</string>

    <!--Sorting and filtering-->
    <string name="choosing">Jármű szűrés</string>
    <string name="sorting">Megállók rendezése</string>

    <string name="menu_home">Home</string>
    <string name="title_activity_main_m">Map</string>
    <string name="asc">Növekvő sorrend</string>
    <string name="desc">Csökkenő</string>
    <string name="nothing" />
    <string name="in_station">Megállóban</string>
    <string name="on_way">Útközben</string>
    <string name="type_of_transport">Jármű típusa</string>
    <string name="send">Tovább</string>
    <string name="map_id">6d76230ee8deccd5</string>


    <!--Dropdown list-->
    <string-array name="transportTypes">
        <item>Busz</item>
        <item>Villamos</item>
        <item>Trolibusz</item>
        <item>Éjszakai busz</item>
        <item>M1</item>
        <item>M2</item>
        <item>M3</item>
        <item>M4</item>
        <item>HÉV</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password">Jelszó</string>
    <string name="email">E-mail</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="foto_credit">Fotó: Rizsavi Tamás</string>
    <string name="trawell_login">TraWell - Bejelentkezés</string>
    <string name="appinfo">Alkalmazás információ</string>
    <string name="info_description">Ez az alkalmazás igyekszik segítséget nyújtani a budapesti tömegközlekedésben résztvevőknek, hogy közösségi alapon fennakadásokről tudják egymást értesíteni. Az alkalmazáshoz szükséges internetkapcsolat, illetve aktív helymeghatározás</string>
    <string name="creator">Készítő</string>
    <string name="myname">Rigó Péter Attila</string>
    <string name="contact">Kapcsolat</string>
    <string name="emailaddress">E-mail: rigopeti96@gmail.com</string>
    <string name="version">Verzió</string>
    <string name="version_number">Verziószám: 1.0.0</string>
    <string name="release_date">Kiadás dátuma: 03/27/2021</string>
    <string name="discord_contact">Discord: rigo_peter #1868</string>
    <string name="term_of_use">Felhasználási feltételek</string>
    <string name="reject">Elutasítás</string>
    <string name="accept">Elfogadás</string>
    <string name="location_use_explain">Ez az alkalmazás hozzáférést kér a helyadatokhoz, hogy azt felhasználva pontosan jelezni tudja a többi felhasználónak a fennakadás pontos helyét. Az alkalmazás nem közvetíti ki a pontos pozícióját, illetve semmilyen más adatát további felhasználóknak.</string>
    <string name="checkbox_accept">A figyelmeztetést elolvastam és elfogadom</string>
    <string name="access_localization">Hozzáférés helyadatokhoz</string>
    <string name="handle_user_data">Felhasználói adatok kezelése</string>
    <string name="store_user_data">Felhasználói adatok tárolása</string>
    <string name="handle_user_explain">Az alkalmazás anonim módon működik, a bejegyzéseknél semelyik felhasználó nem látja a bejelentő nevét, felhasználónevét, e-mail címét, illetve semmilyen személyes adatot a felhasználóról. Felhasználói adat kiadása harmadik félnek nem történik.</string>
    <string name="store_user_explain">Az alkalmazás egyedül a felhasználó felhasználónevét, e-mail címét és az alkalmazáshoz megadott jelszót tárolja el. Más adatokat nem fog kérni sosem az applikáció, az eltárolt adatokat pedig harmadik félnek nem adja ki.</string>
    <string name="use_of_internet">Internet használata</string>
    <string name="use_of_internet_explain">Az alkalmazás használja az internetkapcsolatát a bejelenetések feltöltéséhez, illetve a más felhasználók által bejelentett fennakadások letöltéséhez.</string>

</resources>